--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".FilmsApplication"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Films"> <!-- Reference to Theme.Leanback -->
